assets/cluster-monitoring-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: cluster-monitoring-operator-tls
  labels:
    app: cluster-monitoring-operator
  name: cluster-monitoring-operator
  namespace: openshift-monitoring
spec:
  clusterIP: None
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app: cluster-monitoring-operator
