assets/cluster-monitoring-operator/default-deny-network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: default-deny
  namespace: openshift-monitoring
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
