assets/cluster-monitoring-operator/network-policy-default-deny-user-workload.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: default-deny-user-workload
  namespace: openshift-user-workload-monitoring
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
