assets/cluster-monitoring-operator/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: deny-cluster-monitoring-operator-and-operands
  namespace: openshift-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: openshift-monitoring
  policyTypes:
  - Ingress
  - Egress
