assets/cluster-monitoring-operator/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: cluster-monitoring-operator-access
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: "8443"
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cluster-monitoring-operator
  policyTypes:
  - Ingress
  - Egress
