assets/cluster-monitoring-operator/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: cluster-monitoring-operator-access
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: "8443"
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cluster-monitoring-operator
  policyTypes:
  - Ingress
  - Egress
